# fastapi-mbg

./: .env  .env.example  README.md  alembic.ini  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20260719_1900_initial_foundation.py  20260719_1925_add_users_table.py  20260719_2005_add_schools_and_beneficiaries.py  20260719_2045_add_uom_product_recipe_meal_plan.py  20260719_2115_add_recipe_lines.py  20260719_2230_add_inventory_foundation.py  20260719_2345_add_procurement_purchase_requests.py  20260720_0015_add_goods_receipts.py  20260720_0115_add_production_orders.py  20260720_0215_add_delivery_orders.py  20260720_0330_add_budget_and_accounting_foundation.py  20260720_0415_add_supplier_invoices.py  20260720_0420_fix_supplier_invoice_defaults.py  20260720_0430_add_supplier_payments.py  20260720_0445_expand_sppg_location_fields.py  (+25 more)
app/: __init__.py  bootstrap.py
docs/: ai_provider_setup.md  dokumentasi_teknis_postgis_erp_dapur_mbg_fastapi.md  erp_mbg_fastapi_backend_technical_design_uuid_modular_dependencies.md  erp_mbg_fastapi_backend_technical_design_v2_accounting_product_uom.md  erp_mbg_fastapi_backend_technical_design_v3_addendum_multi_tenant_multi_sppg_gis.md  erp_mbg_fastapi_backend_technical_design_v3_multi_tenant_multi_sppg.md  frontend_api_quick_reference.md  frontend_api_reference.md  frontend_screen_matrix.md  module_catalog_erp_mbg_penawaran.xlsx
erp_mbg_backend.egg-info/: SOURCES.txt  requires.txt
requirements/: base.txt  testing.txt
scripts/: generate_module_catalog_excel.py  seed_demo_data.py  test_db_connection.py
tests/: conftest.py
(+428 files in other folders)
