[project]
name = "erp-mbg-backend"
version = "0.1.0"
description = "FastAPI modular monolith scaffold for ERP MBG backend."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "sqlalchemy[asyncio]>=2.0.42,<3.0.0",
  "alembic>=1.16.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "greenlet>=3.2.3,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-jose[cryptography]>=3.5.0,<4.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
]
dev = [
  "ruff>=0.12.4,<1.0.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
